--- a/pertemuan 11_image classification 2.ipynb
+++ b/pertemuan 11_image classification 2.ipynb
@@ -158,6 +158,7 @@
         "\t# the pixel intensities to the range [0, 1], and then update our\n",
         "\t# images list\n",
         "\timage = Image.open(imagePath)\n",
+        "  #preprocessing\n",
         "\timage = np.array(image.resize((64, 64))) / 255.0 #normalisasi\n",
         "\tdata.append(image)\n",
         "\n",
@@ -265,11 +266,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MSxR7GLQvrUP",
-        "outputId": "d10eb344-6447-4eb2-a17a-baf1a00294e6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "MSxR7GLQvrUP",
+        "outputId": "d76063cf-8359-43f3-b878-16aee8a476d0"
       },
       "source": [
         "from keras.layers import Convolution2D, MaxPooling2D\n",
@@ -277,9 +278,9 @@
         "from keras.layers.core import Flatten, Dense\n",
         "\n",
         "model1 = Sequential()\n",
-        "model1.add(Convolution2D(8, 3,3, activation='relu', input_shape=(64,64,3)))\n",
+        "model1.add(Convolution2D(8, (3,3), activation='relu', input_shape=(64,64,3)))\n",
         "model1.add(MaxPool2D(2,2))\n",
-        "model1.add(Convolution2D(16, 3,3, activation='relu'))\n",
+        "model1.add(Convolution2D(16, (3,3), activation='relu'))\n",
         "model1.add(MaxPool2D(2,2))\n",
         "#fully connected layer\n",
         "model1.add(Flatten())\n",
@@ -288,31 +289,31 @@
         "\n",
         "model1.summary()"
       ],
-      "execution_count": 24,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Model: \"sequential_10\"\n",
+            "Model: \"sequential_15\"\n",
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "conv2d_3 (Conv2D)            (None, 21, 21, 8)         224       \n",
+            "conv2d_12 (Conv2D)           (None, 62, 62, 8)         224       \n",
             "_________________________________________________________________\n",
-            "max_pooling2d_2 (MaxPooling2 (None, 10, 10, 8)         0         \n",
+            "max_pooling2d_10 (MaxPooling (None, 31, 31, 8)         0         \n",
             "_________________________________________________________________\n",
-            "conv2d_4 (Conv2D)            (None, 3, 3, 16)          1168      \n",
+            "conv2d_13 (Conv2D)           (None, 29, 29, 16)        1168      \n",
             "_________________________________________________________________\n",
-            "max_pooling2d_3 (MaxPooling2 (None, 1, 1, 16)          0         \n",
+            "max_pooling2d_11 (MaxPooling (None, 14, 14, 16)        0         \n",
             "_________________________________________________________________\n",
-            "flatten (Flatten)            (None, 16)                0         \n",
+            "flatten_4 (Flatten)          (None, 3136)              0         \n",
             "_________________________________________________________________\n",
-            "dense (Dense)                (None, 100)               1700      \n",
+            "dense_6 (Dense)              (None, 100)               313700    \n",
             "_________________________________________________________________\n",
-            "dense_1 (Dense)              (None, 3)                 303       \n",
+            "dense_7 (Dense)              (None, 3)                 303       \n",
             "=================================================================\n",
-            "Total params: 3,395\n",
-            "Trainable params: 3,395\n",
+            "Total params: 315,395\n",
+            "Trainable params: 315,395\n",
             "Non-trainable params: 0\n",
             "_________________________________________________________________\n"
           ],
@@ -340,7 +341,7 @@
         "    ]\n",
         ")"
       ],
-      "execution_count": null,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -391,7 +392,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a48175fb-331c-4562-f1b9-9207a91069f9"
+        "outputId": "a29f5c5f-ab7a-4b91-b2c7-d36904b8ed19"
       },
       "source": [
         "# train the model using the Adam optimizer\n",
@@ -399,7 +400,7 @@
         "opt = Adam(lr=1e-3, decay=1e-3 / 50)\n",
         "model1.compile(loss=\"categorical_crossentropy\", optimizer=opt, metrics=[\"accuracy\"])"
       ],
-      "execution_count": 28,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
@@ -413,70 +414,70 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3bbMakb0w-XZ",
-        "outputId": "611cfa02-6e69-4ceb-a543-b49d4dc0e885",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3bbMakb0w-XZ",
+        "outputId": "aa764b09-1377-49b8-fa0b-171fc79b4195"
       },
       "source": [
         "H = model1.fit(trainX, trainY, validation_data=(testX, testY), epochs=25, batch_size=32)"
       ],
-      "execution_count": 29,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Epoch 1/25\n",
-            "23/23 [==============================] - 0s 12ms/step - loss: 1.0856 - accuracy: 0.3755 - val_loss: 1.0594 - val_accuracy: 0.4473\n",
+            "23/23 [==============================] - 0s 10ms/step - loss: 1.0801 - accuracy: 0.4951 - val_loss: 1.0465 - val_accuracy: 0.6287\n",
             "Epoch 2/25\n",
-            "23/23 [==============================] - 0s 4ms/step - loss: 1.0476 - accuracy: 0.4937 - val_loss: 1.0125 - val_accuracy: 0.5738\n",
+            "23/23 [==============================] - 0s 5ms/step - loss: 1.0234 - accuracy: 0.5837 - val_loss: 0.9608 - val_accuracy: 0.6287\n",
             "Epoch 3/25\n",
-            "23/23 [==============================] - 0s 4ms/step - loss: 0.9862 - accuracy: 0.5584 - val_loss: 0.9302 - val_accuracy: 0.6624\n",
+            "23/23 [==============================] - 0s 5ms/step - loss: 0.9227 - accuracy: 0.5879 - val_loss: 0.8428 - val_accuracy: 0.6076\n",
             "Epoch 4/25\n",
-            "23/23 [==============================] - 0s 4ms/step - loss: 0.8977 - accuracy: 0.6399 - val_loss: 0.8621 - val_accuracy: 0.5823\n",
+            "23/23 [==============================] - 0s 5ms/step - loss: 0.8129 - accuracy: 0.5992 - val_loss: 0.7311 - val_accuracy: 0.6414\n",
             "Epoch 5/25\n",
-            "23/23 [==============================] - 0s 4ms/step - loss: 0.8471 - accuracy: 0.6399 - val_loss: 0.8301 - val_accuracy: 0.6076\n",
+            "23/23 [==============================] - 0s 5ms/step - loss: 0.7411 - accuracy: 0.6343 - val_loss: 0.6719 - val_accuracy: 0.7089\n",
             "Epoch 6/25\n",
-            "23/23 [==============================] - 0s 4ms/step - loss: 0.7764 - accuracy: 0.6610 - val_loss: 0.8078 - val_accuracy: 0.6245\n",
+            "23/23 [==============================] - 0s 5ms/step - loss: 0.7326 - accuracy: 0.6385 - val_loss: 0.6880 - val_accuracy: 0.7342\n",
             "Epoch 7/25\n",
-            "23/23 [==============================] - 0s 4ms/step - loss: 0.7422 - accuracy: 0.6737 - val_loss: 0.6941 - val_accuracy: 0.6878\n",
+            "23/23 [==============================] - 0s 5ms/step - loss: 0.7031 - accuracy: 0.6681 - val_loss: 0.6517 - val_accuracy: 0.7215\n",
             "Epoch 8/25\n",
-            "23/23 [==============================] - 0s 5ms/step - loss: 0.6910 - accuracy: 0.6990 - val_loss: 0.6570 - val_accuracy: 0.7384\n",
+            "23/23 [==============================] - 0s 5ms/step - loss: 0.6648 - accuracy: 0.7018 - val_loss: 0.6150 - val_accuracy: 0.6962\n",
             "Epoch 9/25\n",
-            "23/23 [==============================] - 0s 4ms/step - loss: 0.6513 - accuracy: 0.7454 - val_loss: 0.6207 - val_accuracy: 0.7089\n",
+            "23/23 [==============================] - 0s 5ms/step - loss: 0.6246 - accuracy: 0.7482 - val_loss: 0.5970 - val_accuracy: 0.7173\n",
             "Epoch 10/25\n",
-            "23/23 [==============================] - 0s 4ms/step - loss: 0.6262 - accuracy: 0.7398 - val_loss: 0.7461 - val_accuracy: 0.6878\n",
+            "23/23 [==============================] - 0s 5ms/step - loss: 0.6007 - accuracy: 0.7764 - val_loss: 0.5907 - val_accuracy: 0.7722\n",
             "Epoch 11/25\n",
-            "23/23 [==============================] - 0s 4ms/step - loss: 0.6210 - accuracy: 0.7314 - val_loss: 0.5890 - val_accuracy: 0.7553\n",
+            "23/23 [==============================] - 0s 5ms/step - loss: 0.5738 - accuracy: 0.7651 - val_loss: 0.5355 - val_accuracy: 0.8186\n",
             "Epoch 12/25\n",
-            "23/23 [==============================] - 0s 4ms/step - loss: 0.5902 - accuracy: 0.7482 - val_loss: 0.5709 - val_accuracy: 0.7468\n",
+            "23/23 [==============================] - 0s 5ms/step - loss: 0.5756 - accuracy: 0.7806 - val_loss: 0.6560 - val_accuracy: 0.7300\n",
             "Epoch 13/25\n",
-            "23/23 [==============================] - 0s 4ms/step - loss: 0.5769 - accuracy: 0.7722 - val_loss: 0.5812 - val_accuracy: 0.7468\n",
+            "23/23 [==============================] - 0s 5ms/step - loss: 0.5513 - accuracy: 0.7553 - val_loss: 0.5376 - val_accuracy: 0.7975\n",
             "Epoch 14/25\n",
-            "23/23 [==============================] - 0s 4ms/step - loss: 0.5705 - accuracy: 0.7595 - val_loss: 0.5443 - val_accuracy: 0.7806\n",
+            "23/23 [==============================] - 0s 5ms/step - loss: 0.5098 - accuracy: 0.8031 - val_loss: 0.4960 - val_accuracy: 0.8101\n",
             "Epoch 15/25\n",
-            "23/23 [==============================] - 0s 5ms/step - loss: 0.5471 - accuracy: 0.7651 - val_loss: 0.6208 - val_accuracy: 0.7468\n",
+            "23/23 [==============================] - 0s 5ms/step - loss: 0.4894 - accuracy: 0.8186 - val_loss: 0.4788 - val_accuracy: 0.8228\n",
             "Epoch 16/25\n",
-            "23/23 [==============================] - 0s 5ms/step - loss: 0.5418 - accuracy: 0.7637 - val_loss: 0.5609 - val_accuracy: 0.7806\n",
+            "23/23 [==============================] - 0s 5ms/step - loss: 0.4940 - accuracy: 0.8200 - val_loss: 0.5981 - val_accuracy: 0.8059\n",
             "Epoch 17/25\n",
-            "23/23 [==============================] - 0s 4ms/step - loss: 0.5162 - accuracy: 0.7862 - val_loss: 0.5057 - val_accuracy: 0.7975\n",
+            "23/23 [==============================] - 0s 5ms/step - loss: 0.4844 - accuracy: 0.8186 - val_loss: 0.5047 - val_accuracy: 0.8059\n",
             "Epoch 18/25\n",
-            "23/23 [==============================] - 0s 5ms/step - loss: 0.5010 - accuracy: 0.8101 - val_loss: 0.5194 - val_accuracy: 0.8186\n",
+            "23/23 [==============================] - 0s 5ms/step - loss: 0.4731 - accuracy: 0.8101 - val_loss: 0.4941 - val_accuracy: 0.8143\n",
             "Epoch 19/25\n",
-            "23/23 [==============================] - 0s 5ms/step - loss: 0.4904 - accuracy: 0.8031 - val_loss: 0.5279 - val_accuracy: 0.8017\n",
+            "23/23 [==============================] - 0s 5ms/step - loss: 0.4538 - accuracy: 0.8172 - val_loss: 0.5011 - val_accuracy: 0.8101\n",
             "Epoch 20/25\n",
-            "23/23 [==============================] - 0s 5ms/step - loss: 0.4766 - accuracy: 0.8003 - val_loss: 0.4947 - val_accuracy: 0.8228\n",
+            "23/23 [==============================] - 0s 5ms/step - loss: 0.4463 - accuracy: 0.8383 - val_loss: 0.5623 - val_accuracy: 0.7932\n",
             "Epoch 21/25\n",
-            "23/23 [==============================] - 0s 5ms/step - loss: 0.4630 - accuracy: 0.8059 - val_loss: 0.7515 - val_accuracy: 0.6709\n",
+            "23/23 [==============================] - 0s 5ms/step - loss: 0.4321 - accuracy: 0.8368 - val_loss: 0.4530 - val_accuracy: 0.8776\n",
             "Epoch 22/25\n",
-            "23/23 [==============================] - 0s 5ms/step - loss: 0.4893 - accuracy: 0.7932 - val_loss: 0.4710 - val_accuracy: 0.8143\n",
+            "23/23 [==============================] - 0s 6ms/step - loss: 0.4194 - accuracy: 0.8397 - val_loss: 0.4184 - val_accuracy: 0.8945\n",
             "Epoch 23/25\n",
-            "23/23 [==============================] - 0s 5ms/step - loss: 0.4595 - accuracy: 0.8059 - val_loss: 0.4959 - val_accuracy: 0.8270\n",
+            "23/23 [==============================] - 0s 5ms/step - loss: 0.4163 - accuracy: 0.8439 - val_loss: 0.4047 - val_accuracy: 0.8861\n",
             "Epoch 24/25\n",
-            "23/23 [==============================] - 0s 5ms/step - loss: 0.4386 - accuracy: 0.8158 - val_loss: 0.4667 - val_accuracy: 0.8270\n",
+            "23/23 [==============================] - 0s 6ms/step - loss: 0.4097 - accuracy: 0.8481 - val_loss: 0.5378 - val_accuracy: 0.7679\n",
             "Epoch 25/25\n",
-            "23/23 [==============================] - 0s 5ms/step - loss: 0.4527 - accuracy: 0.8045 - val_loss: 0.4926 - val_accuracy: 0.7975\n"
+            "23/23 [==============================] - 0s 5ms/step - loss: 0.4620 - accuracy: 0.8115 - val_loss: 0.4833 - val_accuracy: 0.8397\n"
           ],
           "name": "stdout"
         }
